--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -18,16 +18,20 @@
 
     <PreferenceCategory app:title="@string/title_settings_reminder">
 
-        <SwitchPreferenceCompat
-            app:key="sync"
-            app:title="@string/sync_title" />
+        <SwitchPreference
+            app:key="@string/key_release_today"
+            app:icon="@drawable/ic_fiber_new"
+            app:summaryOff="@string/release_summary_off"
+            app:summaryOn="@string/release_summary_on"
+            app:title="@string/reminder_release" />
 
-        <SwitchPreferenceCompat
-            app:dependency="sync"
-            app:key="attachment"
-            app:summaryOff="@string/attachment_summary_off"
-            app:summaryOn="@string/attachment_summary_on"
-            app:title="@string/attachment_title" />
+
+        <SwitchPreference
+            app:key="@string/key_daily"
+            app:icon="@drawable/ic_add_alert"
+            app:summaryOff="@string/daily_summary_off"
+            app:summaryOn="@string/daily_summary_on"
+            app:title="@string/reminder_daily" />
 
     </PreferenceCategory>
 
