--- a/app/src/main/res/xml/my_movie_info.xml
+++ b/app/src/main/res/xml/my_movie_info.xml
@@ -4,7 +4,8 @@
     android:initialLayout="@layout/my_movie"
     android:minWidth="250dp"
     android:minHeight="180dp"
-    android:previewImage="@drawable/example_appwidget_preview"
+    android:previewImage="@drawable/fate"
     android:resizeMode="vertical"
-    android:updatePeriodMillis="86400000"
-    android:widgetCategory="home_screen"></appwidget-provider>
+
+    android:updatePeriodMillis="0"
+    android:widgetCategory="home_screen" />
