--- a/app/src/main/res/layout/banner_widget.xml
+++ b/app/src/main/res/layout/banner_widget.xml
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_weight="1"
-            android:background="@color/colorPrimaryDark"
-            android:text="@string/appwidget_text"
+            android:background="@color/bluegrey"
+            android:text="@string/appwigetText"
             android:textAlignment="center"
             android:textColor="#ffffff"
             android:textSize="20sp"
@@ -35,8 +35,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="center"
-        android:background="@color/colorAccent"
-        android:text="@string/empty_text"
+        android:background="@color/bluegrey"
+        android:text="@string/title_activity_favorit"
         android:textAlignment="center"
         android:textColor="#ffffff"
         android:textSize="20sp"
