--- a/app/src/main/res/xml/banner_widget_info.xml
+++ b/app/src/main/res/xml/banner_widget_info.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
-    android:initialKeyguardLayout="@layout/my_movie"
-    android:initialLayout="@layout/my_movie"
-    android:minWidth="250dp"
+    android:initialKeyguardLayout="@layout/banner_widget"
+    android:initialLayout="@layout/banner_widget"
+    android:minWidth="180dp"
     android:minHeight="180dp"
     android:previewImage="@drawable/fate"
-    android:resizeMode="vertical"
-
+    android:resizeMode="horizontal|vertical"
     android:updatePeriodMillis="0"
     android:widgetCategory="home_screen" />
